<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Triskelion</string>
    <string name="fingerprint_authenticate_success">Successfully authenticated!</string>
    <string name="register_success">Successfully registered!</string>
    <string name="fingerprint_authenticate_fail">Authentication failed!</string>
    <string name="register_fail">Registration failed!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="bacter_leave_review">Leave Review</string>
    <string name="bacter_contact_support">Contact Support</string>
    <string name="bacter_try_other_apps">Try Other Apps</string>
    <string name="bacter_version">Version</string>
    <string name="bacter_author">Author</string>
    <string name="bacter_facebook_label">Facebook</string>
    <string name="bacter_twitter_label">Twitter</string>
    <string name="bacter_web_label">Web</string>
    <string name="bacter_acknowledgements">Acknowledgements</string>
    <string name="bacter_privacy_policy">Privacy Policy</string>
    <string name="bacter_about_screen_title">About</string>
    <string name="bacter_share">Share</string>
    <string name="bacter_contact_log_event">Contact</string>
    <string name="bacter_review_log_event">Review</string>
    <string name="bacter_share_log_event">Share</string>
    <string name="bacter_try_other_app_log_event">Try Other Apps</string>
    <string name="bacter_facebook_log_event">Facebook</string>
    <string name="bacter_twitter_log_event">Twitter</string>
    <string name="bacter_website_log_event">Website</string>
    <string name="bacter_privacy_log_event">Privacy</string>
    <string name="bacter_acknowledgements_log_event">Acknowledgements</string>
    <string name="bacter_can_not_open">You don\'t have any app that can open this link</string>
    <string name="bacter_email_body_prompt">Please type your question here: </string>
    <string name="bacter_guide">Guide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_title_tenets">TENETS</string>
    <string name="fragment_title_codesOfConduct">Codes Of Conduct</string>
    <string name="fragment_title_preamble">PREAMBLE</string>
    <string name="fragment_title_prayer">PRAYER</string>
    <string name="fragment_title_history">HISTORY</string>
    <string name="tenets_explanation1">Explanation:\n\nThe first phrase emphasizes the true meaning of <b>Tau Gamma Phi</b> which is the Triskelion Grand   Fraternity. Greek representation of our Fraternity was then very essential to be able to commune with the then existing fraternity system; a fraternity system which the Triskelions wanted to correct. Supremacy however as explicitly expressed in the first tenet is rresponsibility to be fulfilled. Upon admittance to the Triskelion Grand Fraternity,  Triskelion is bestowed with a task to attain supremacy in his field of interest and endeavor. And with each Triskelion fulfilling his duty to be supreme in his realm, the Triskelion Grand Fraternity shall then attain Supremacy in all fields of human endeavor. So therefore, the Supremacy we are trying to portray is a collective effort from each Triskelion. In addition, we have to remember that real Supremacy can only be attained if we can meet the demands of the present times; if the demands change, so as the level of Supremacy.</string>
    <string name="tenets1">1.The <b>TAU GAMMA PHI</b> is the <b>Triskelions’</b> Grand Fraternity, my Fraternity, the supreme Fraternity.</string>
    <string name="tenets2">2.Primum nil nocere – first of all do not harm, let alone in defense of self, for whatever cause man has come into being, for whatever reason he exist, to wherever he is destined, keen to all living creatures around him, MAN IS A BROTHER UNTO MAN.</string>
    <string name="tenets_explanation2">Explanation:\n\nThe second tenet is the expression of true brotherhood. It reconciles the word Fraternity with its original and tantamount meaning which is Brotherhood; a Universal kind of Brotherhood. The fraternity is our training ground on how to become a true brother to our fellow human beings. As long as the one in front of you is a person, then you should always consider him as a brother. Furthermore, if we are to treat other persons as our brothers, so much more if they are Triskelions; and if we are to treat Triskelions as true brothers, then so much more if they are our true Blood Brothers. So therefore, the expression of our Brotherhood must start in our family but never make the family as an excuse for inactivity but instead make the fraternity as the reason why we have gained more love and respect from our families. However, the phrase let alone in defense of oneself is an expression of everyone’s right to self-preservation. It is just right and proper to defend ourselves in times of extreme chaos, but we have to always bear in mind that we firmly believe in the power of reason and not in the use of force as a reason.</string>
    <string name="tenets3">3.De gustibus non desputandum est \n– of likes and dislikes there should be no desputing. <b>LIVE AND LET LIVE</b>.</string>
    <string name="tenets_explanation3">Explanation:\n\nThe third tenet is an expression of respect for an individual’s reewill. We must tolerate the existence of in dividual differences among Triskelions but if and only if such differences are not detrimental to the fraternity. The freedom that we are bequeathed upon is within the boundary of our Tenets and Code of Conduct. This we must comply with in order to be called true Triskelions. We have to accept that Absolute Freedom is a myth in the real world, so as Triskelions, we have the obligation to conform with the Triskelion Doctrines such that whatever disposition we have that doesn’t harmonize with the Triskelion Principles must be corrected.</string>
    <string name="tenets4">4.Preserve yourself, <b>Brain</b>, <b>Brawn</b> and <b>Blood</b>.</string>
    <string name="tenets_explanation4">Explanation:\n\nThe fourth tenet is another challenge for the Triskelions. It is a challenge to portray the authentic image of a Triskelion. This tenet does not mean that we have to preserve whatever we are today, but rather it conveys a challenge to achieve the highest form of Triskelionism and that we have to preserve. Yet it may be impossible to achieve this highest form, but with this constantly in our minds, it will guide us to the path of righteousness.</string>
    <string name="tenets5">5.Brothers/Sisters I shall love and respect their counsel I shall heed.</string>
    <string name="tenets_explanation5">Explanation:\n\nThe fifth tenet considers the fact that each human being shall eventually experience troubles and difficulties in life. As an answer to this, each Triskelion is given the duty to comfort and assist any Triskelion in need as well as each Triskelion is given the duty to seek for guidance and counsel from prominent Brothers in times of problems. We must not forget that the Triskelion is a light over darkness as shown in our official color. That is why whenever we see a person in darkness, let us always try to offer him some light to guide him regain his confidence. So if we are the ones in darkness, then we must seek for light, and that light is your fellow Triskelion.</string>
    <string name="tenets6">6._______________ is my alma mater(your chapter), to cherish and to honor, by it’s rules be governed and be guided.</string>
    <string name="tenets_explanation6">Explanation:\n\nLiterally, the sixth tenet simply signifies to always follow the policies of your School and of your Chapter but in a broader essence there is much more about this tenet. The implication of this tenet is very vital for each Triskelion because it is a duty to always adhere to the laws provided for in the place where your feet are set. Just as a Filipino who migrated to the USA cannot anymore exercise some of the Filipino practices if they are against the law of the USA. A Triskelion must always be aware of his surroundings especially the do’s and don’ts. Triskelions are survivors, they can’t easily be defeated because they always study the rules of the game.</string>
    <string name="tenets7">7.The Grand Triskelion is righteous, just and strong. He shall be obeyed.</string>
    <string name="tenets_explanation7">Explanation:\n\nThe Grand Triskelion is the heart of the Chapter that is why all Triskelion members must give all respect and obedience to him.\nOn the other hand, this tenet is also a challenge for the Grand Triskelion himself. A challenge to be always Righteous, Just and Strong. You can’t be considered a good Grand Triskelion if you cannot maintain the said qualities. So for all of us, if we are to elect a Grand Triskelion, be sure to select the one with these three  Righteous, Just and Strong.</string>
    <string name="tenets8">8.A Triskelion is a Brother/Sister to his fellow Triskelion.</string>
    <string name="tenets_explanation8">Explanation:\n\nThe Triskelion Brotherhood is extra-ordinary, that is why the last tenet emphasizes the bond between Triskelions. It is a "mortal sin" to socially discriminate a fellow Triskelion and it is intolerable to offend a fellow Triskelion. One of the greatest reasons why we became supreme among Fraternities is the kind of Brotherhood we practice. We are the only Fraternity who practice Universal Brotherhood as explained in the second tenet. We are the only Fraternity that other people can mingle with in times of parties and other celebrations. We are the only Fraternity where the young and the olds can commune with each other without discrimination…… Therefore let us not tarnish this wonderful essence of Triskelionism because this what makes the BIG DIFFERENCE</string>
    <string name="codes_of_conduct_title"><b>CODES OF CONDUCT</b></string>
    <string name="cap_t"><b>T</b> – Treat others as you would have them treat you.</string>
    <string name="cap_r"><b>R</b> – Rise to defend the name and honor of the Fraternity whenever it is unjustly criticized.</string>
    <string name="cap_i"><b>I</b> – Inform and orient your fellow brothers in every matter which you consider vital to the concern of the Fraternity.</string>
    <string name="cap_s"><b>S</b> – Salute and address your fellow brothers in the proper manner.</string>
    <string name="cap_k"><b>K</b> – Keep decorum in all fraternity meetings and act accordingly outside the fraternity.</string>
    <string name="cap_e"><b>E</b> – Excel in your chosen field of interest and endeavor.</string>
    <string name="cap_l"><b>L</b> – Live a life of moderation; avoid gluttony, drunkenness, and other vices lest you forget your family, Fraternity, work, health and studies.</string>
    <string name="cap_second_i"><b>I</b> – In your everyday life, take care of what you say and write, beware of misinterpretation and lasting misunderstanding.</string>
    <string name="cap_o"><b>O</b> – Obey all fraternity rules &amp; regulations; be guided in your daily ventures by the Tenets and Codes of Conduct of the Fraternity.</string>
    <string name="cap_n"><b>N</b> – Never reveal to anyone, not to your family, nor to your friends, the concern of the fraternity.</string>
    <string name="title_preamble"><b>PREAMBLE</b></string>
</resources>