<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CodesOfConductActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:scrollbarStyle="insideOverlay"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/coc_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorAccent"
                    android:text="@string/codes_of_conduct_title"/>
                <TextView
                    android:id="@+id/coc1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_below="@id/coc_title"
                    android:text="@string/cap_t"
                    android:gravity="start"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/coc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="start"
                    android:layout_marginRight="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_below="@id/coc1"
                    android:text="@string/cap_r"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/coc3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_below="@id/coc2"
                    android:gravity="start"
                    android:text="@string/cap_i"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:layout_alignParentStart="true"/>
                <TextView
                    android:id="@+id/coc4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_below="@id/coc3"
                    android:gravity="start"
                    android:text="@string/cap_s"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/coc5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_below="@id/coc4"
                    android:text="@string/cap_k"
                    android:textColor="@color/colorAccent"
                    android:gravity="start"
                    android:textSize="19sp"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/coc6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_below="@id/coc5"
                    android:text="@string/cap_e"
                    android:gravity="start"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:layout_alignParentStart="true"/>
                <TextView
                    android:id="@+id/coc7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_below="@id/coc6"
                    android:text="@string/cap_l"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:gravity="start"
                    android:layout_alignParentStart="true"/>
                <TextView
                    android:id="@+id/coc8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_below="@id/coc7"
                    android:text="@string/cap_second_i"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:gravity="start"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/coc9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_below="@id/coc8"
                    android:text="@string/cap_o"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:gravity="start"
                    android:layout_alignParentStart="true"/>
                <TextView
                    android:id="@+id/coc10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_below="@id/coc9"
                    android:text="@string/cap_n"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>