<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main">
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:minHeight="?attr/actionBarSize"
                    android:scrollbars="none"
                    tools:ignore="UselessParent">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <View
                            android:layout_width="@dimen/spacing_middle"
                            android:layout_height="0dp"/>
                        <Button
                            android:id="@+id/tab_tenets"
                            android:layout_width="wrap_content"
                            android:layout_margin="6dp"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@drawable/tab_rounded_accent"
                            android:onClick="onTabButtonClick"
                            android:paddingLeft="@dimen/spacing_xlarge"
                            android:paddingRight="@dimen/spacing_xlarge"
                            android:text="@string/fragment_title_tenets"
                            android:textColor="@android:color/white" />
                        <Button
                            android:id="@+id/tab_codesofconduct"
                            android:layout_width="wrap_content"
                            android:layout_margin="6dp"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@drawable/tab_rounded_accent"
                            android:onClick="onTabButtonClick"
                            android:paddingLeft="@dimen/spacing_xlarge"
                            android:paddingRight="@dimen/spacing_xlarge"
                            android:text="@string/fragment_title_codesOfConduct"
                            android:textColor="@android:color/white" />
                        <Button
                            android:id="@+id/tab_preamble"
                            android:layout_width="wrap_content"
                            android:layout_margin="6dp"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@drawable/tab_rounded_accent"
                            android:onClick="onTabButtonClick"
                            android:paddingLeft="@dimen/spacing_xlarge"
                            android:paddingRight="@dimen/spacing_xlarge"
                            android:text="@string/fragment_title_preamble"
                            android:textColor="@android:color/white" />
                        <Button
                            android:id="@+id/tab_history"
                            android:layout_width="wrap_content"
                            android:layout_margin="6dp"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@drawable/tab_rounded_accent"
                            android:onClick="onTabButtonClick"
                            android:paddingLeft="@dimen/spacing_xlarge"
                            android:paddingRight="@dimen/spacing_xlarge"
                            android:text="@string/fragment_title_history"
                            android:textColor="@android:color/white" />
                        <Button
                            android:id="@+id/tab_prayer"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:layout_margin="6dp"
                            android:background="@drawable/tab_rounded_accent"
                            android:onClick="onTabButtonClick"
                            android:paddingLeft="@dimen/spacing_xlarge"
                            android:paddingRight="@dimen/spacing_xlarge"
                            android:text="@string/fragment_title_prayer"
                            android:textColor="@android:color/white" />
                        <View
                            android:layout_width="@dimen/spacing_middle"
                            android:layout_height="0dp" />
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>